kubernetes/applications/home-assistant/kubernetes-01/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: home-assistant-entrance
spec:
  hostnames:
    - home-assistant.tools.internal.place
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: gateway-api-extra-gateway-production
      namespace: istio
      sectionName: https-terminate
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: home-assistant
          port: 8123
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
