kubernetes/applications/home-assistant/kubernetes-01/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: home-assistant
spec:
  ingressClassName: nginx
  rules:
    - host: &host "homeassistant.tools.internal.place"
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: home-assistant
              port:
                name: "http"
  #tls:
  #  - hosts:
  #      - *host
  #    secretName: home-assistant-tls
